1) build hash tree ok 2) serilize file hash tree into .fht ok 3) unserilize .fht to build a hash tree ok. 4) diff two same hight hash tree ok.
three test samples.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,16 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-bin_PROGRAMS = testft
+bin_PROGRAMS = testft testdf testsl
+
 testft_SOURCES = TestFileTree.cpp
 testft_CPPFLAGS =-I$(srcdir)/../lib
 testft_LDADD = ../lib/libgsync.la
+
+testdf_SOURCES = TestFileDiff.cpp
+testdf_CPPFLAGS =-I$(srcdir)/../lib
+testdf_LDADD = ../lib/libgsync.la
+
+testsl_SOURCES = TestSerilize.cpp
+testsl_CPPFLAGS =-I$(srcdir)/../lib
+testsl_LDADD = ../lib/libgsync.la
