Add a sample to sync to binary files, work fine.
Now, .fht will store the last block offset and length to simplify merge process.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-bin_PROGRAMS = testft testdf testsl
+bin_PROGRAMS = testft testdf testsl testsync
 
 testft_SOURCES = TestFileTree.cpp
 testft_CPPFLAGS =-I$(srcdir)/../lib
@@ -14,3 +14,7 @@ testdf_LDADD = ../lib/libgsync.la
 testsl_SOURCES = TestSerilize.cpp
 testsl_CPPFLAGS =-I$(srcdir)/../lib
 testsl_LDADD = ../lib/libgsync.la
+
+testsync_SOURCES = TestSync.cpp
+testsync_CPPFLAGS =-I$(srcdir)/../lib
+testsync_LDADD = ../lib/libgsync.la
